Update README.md and index.html for improved installation instructions and community engagement

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
             <h2><i class="fas fa-book"></i> How to Use</h2>
             <ol>
                 <li>Install via Python: <code>pip install social-media-downloader</code></li>
-                <li>Run the command: <code>social-media-downloader</code></li>
+                <li>Run the command: <code>social-media-downloader</code> or <code>smd</code></li>
                 <li>For .deb files, use: <code>sudo dpkg -i social-media-downloader_amd64.deb</code></li>
                 <li>After installing the .deb package, run the command: <code>smd</code></li>
-                <li>For .exe files, run: <code>Social.Media.Downloader.exe</code></li>
-                <li>For Linux pre-binaries, extract the <code>smd-linux.tar.gz</code> file and run the
+                <li>For .exe files, run: <code>smd.exe</code></li>
+                <li>For Linux binaries, extract the <code>smd-linux.tar.gz</code> file and run the
                     script <code>./smd</code></li>
                 <li>Follow on-screen steps</li>
                 <li>For additional support, refer to the <a href="#support">Support</a> section.</li>
@@ -139,8 +139,10 @@
             <p><i class="fab fa-github"></i> GitHub Issues: <a
                     href="https://github.com/nayandas69/Social-Media-Downloader/issues" target="_blank">Click here</a>
             </p>
-            <p><i class="fab fa-discord"></i> Join the community on <a href="https://discord.gg/skHyssu"
+            <p><i class="fab fa-discord"></i> Join the community on: <a href="https://discord.gg/skHyssu"
                     target="_blank">Discord</a></p>
+            <p><i class="fa-solid fa-info"></i> Read Documents: <a href="https://nayandas69.github.io/smd-docsite"
+                    target="_blank">Docs</a></p>
         </section>
     </main>
 
